# dotstate

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  PACKAGE_MANAGER_SPEC.md  PROGRESS.md  PUBLISHING.md  README.md  REFACTOR_PLAN.md  SECURITY.md  instructions.md
.claude/: stele.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.llm_docs/: GITHUB_SETUP_ENHANCEMENT.md  GITHUB_SETUP_TODO.md  PROFILE_MANAGEMENT_PLAN.md  README.md  review_report.md
.stele/: project.json
Formula/: dotstate.rb
crates/tui-forge/: Cargo.toml
crates/tui-forge/src/: icons.rs  layout.rs  lib.rs  theme.rs
crates/tui-forge/src/components/: footer.rs  header.rs  help_overlay.rs  mod.rs
crates/tui-forge/src/form/: config.rs  field.rs  layout.rs  mod.rs  values.rs
crates/tui-forge/src/form/fields/: checkbox.rs  mod.rs  password.rs  radio.rs  text_area.rs  text_input.rs  toggle.rs
crates/tui-forge/src/input/: mod.rs
crates/tui-forge/src/keymap/: action.rs  binding.rs  mod.rs  presets.rs
crates/tui-forge/src/screen/: manager.rs  mod.rs  transition.rs
crates/tui-forge/src/widgets/: dialog.rs  menu.rs  mod.rs  popup.rs  toast.rs
src/: app.rs  cli.rs  config.rs  dotfile_candidates.rs  file_manager.rs  git.rs  github.rs  icons.rs  lib.rs  main.rs  styles.rs  tui.rs  ui.rs  version_check.rs
tests/: integration_add_file.rs  stress_test_validation.rs  test_example_config.rs  test_keymap_overrides.rs  test_override_shadowing.rs  workflow_onboarding.rs  workflow_profiles.rs
website/: .htaccess  .vercelignore  DEPLOY.md  README.md  _headers  index.html  install.sh  script.js  styles.css  (+1 more)
(+111 files in other folders)
