[package]
name = "tui-forge"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Batteries-included toolkit for building ratatui TUI applications"
license = "MIT OR Apache-2.0"
keywords = ["tui", "ratatui", "terminal", "ui", "toolkit"]
categories = ["command-line-interface"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[features]
default = ["keymap"]
keymap = ["dep:serde", "dep:serde_json"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
items_after_statements = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
unnecessary_debug_formatting = "allow"
uninlined_format_args = "allow"
format_push_string = "allow"
unnecessary_wraps = "allow"
must_use_candidate = "allow"
trivially_copy_pass_by_ref = "allow"
match_same_arms = "allow"
unused_self = "allow"
match_wildcard_for_single_variants = "allow"
needless_pass_by_value = "allow"
assigning_clones = "allow"
option_if_let_else = "allow"
implicit_hasher = "allow"
return_self_not_must_use = "allow"
map_unwrap_or = "allow"
bool_to_int_with_if = "allow"
comparison_chain = "allow"
default_trait_access = "allow"
manual_let_else = "allow"
